tests/dataset/tpc-h/compiler/kt/q11.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q11.kt:88:53: error: type mismatch: inferred type is Number but Double was expected
        __res.add((Row0(ps_partkey = g.key, value = sum(run {
                                                    ^
/tmp/q11.kt:107:23: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun BigDecimal.times(other: BigDecimal): BigDecimal defined in kotlin
@InlineOnly public inline operator fun BigInteger.times(other: BigInteger): BigInteger defined in kotlin
val threshold = total * 0.0001
                      ^
