tests/dataset/tpc-h/compiler/kt/q11.kt
// Generated by Mochi compiler v0.10.28 on 2025-07-18T07:06:24Z
data class Nation(var n_nationkey: Int, var n_name: String)

data class Partsupp(var ps_partkey: Int, var ps_suppkey: Int, var ps_supplycost: Double, var ps_availqty: Int)

data class Row0(var ps_partkey: Int, var value: Double)

data class Row1(var ps: Partsupp, var s: Supplier, var n: Nation)

data class Supplier(var s_suppkey: Int, var s_nationkey: Int)

fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

fun json(v: Any?) {
    println(toJson(v))
}

fun toJson(v: Any?): String = when (v) {
    null -> "null"
    is String -> "\"" + v.replace("\"", "\\\"") + "\""
    is Boolean, is Number -> v.toString()
    is Map<*, *> -> v.entries.joinToString(prefix = "{", postfix = "}") { toJson(it.key.toString()) + ":" + toJson(it.value) }
    is Iterable<*> -> v.joinToString(prefix = "[", postfix = "]") { toJson(it) }
    else -> toJson(v.toString())
}

class Group<K, T>(val key: K, val items: MutableList<T>) : MutableList<T> by items
// Code generated from q11.mochi

val nation = mutableListOf(Nation(n_nationkey = 1, n_name = "GERMANY"), Nation(n_nationkey = 2, n_name = "FRANCE"))

val supplier = mutableListOf(Supplier(s_suppkey = 100, s_nationkey = 1), Supplier(s_suppkey = 200, s_nationkey = 1), Supplier(s_suppkey = 300, s_nationkey = 2))

val partsupp = mutableListOf(Partsupp(ps_partkey = 1000, ps_suppkey = 100, ps_supplycost = 10.0, ps_availqty = 100), Partsupp(ps_partkey = 1000, ps_suppkey = 200, ps_supplycost = 20.0, ps_availqty = 50), Partsupp(ps_partkey = 2000, ps_suppkey = 100, ps_supplycost = 5.0, ps_availqty = 10), Partsupp(ps_partkey = 3000, ps_suppkey = 300, ps_supplycost = 8.0, ps_availqty = 500))

val target_nation = "GERMANY"

val filtered = run {
    val __res = mutableListOf<Row0>()
    for (ps in partsupp) {
        for (s in supplier) {
            if (s.s_suppkey == ps.ps_suppkey) {
                for (n in nation) {
                    if (n.n_nationkey == s.s_nationkey) {
                        if (n.n_name == target_nation) {
                            __res.add(Row0(ps_partkey = ps.ps_partkey, value = ps.ps_supplycost * (ps.ps_availqty).toDouble()))
                        }
                    }
                }
            }
        }
    }
    __res
}

val grouped = run {
    val __groups = mutableMapOf<Int, Group<Int, Row0>>()
    val __order = mutableListOf<Int>()
    for (x in filtered) {
        val __k = x.ps_partkey
        var __g = __groups[__k]
        if (__g == null) {
            __g = Group(__k, mutableListOf<Row0>())
            __groups[__k] = __g
            __order.add(__k)
        }
        __g.add(x)
    }
    val __res = mutableListOf<MutableMap<String, Any?>>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add((Row0(ps_partkey = g.key, value = sum(run {
    val __res = mutableListOf<Double>()
    for (r in g) {
        __res.add(r.value)
    }
    __res
})) as MutableMap<String, Any?>))
    }
    __res
}

val total = sum(run {
    val __res = mutableListOf<Double>()
    for (x in filtered) {
        __res.add(x.value)
    }
    __res
})

val threshold = total * 0.0001

val result = run {
    val __sorted = grouped.sortedByDescending { (it as MutableMap<String, Any?>)["value"] as Comparable<Any> }
    val __res = mutableListOf<MutableMap<String, Any?>>()
    for (x in __sorted) {
        if (toDouble((x as MutableMap<String, Any?>)["value"]) > threshold) {
            __res.add((x as MutableMap<String, Any?>))
        }
    }
    __res
}

fun main() {
    json(result)
}
